Make common files library and seperate executables from them

--- a/Projects/Project_1/CMakeLists.txt
+++ b/Projects/Project_1/CMakeLists.txt
@@ -3,4 +3,6 @@ project(Homework_1 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(test_o main.c file.c c_string.c)
+add_library(common c_string.c file.c project_util.c)
+add_executable(test_o main.c)
+target_link_libraries(test_o common)
