--- a/Projects/Project_1/CMakeLists.txt
+++ b/Projects/Project_1/CMakeLists.txt
@@ -10,7 +10,11 @@ add_executable(test_o main.c)
 add_executable(psearch1a psearch1a.c)
 add_executable(psearch1b psearch1b.c)
 add_executable(psearch1c psearch1c.c)
+add_executable(psearch2a psearch2a.c)
+add_executable(psearch2aslave psearch2aslave.c)
 target_link_libraries(test_o common)
 target_link_libraries(psearch1a common)
 target_link_libraries(psearch1b common pthread rt)
 target_link_libraries(psearch1c common)
+target_link_libraries(psearch2a common pthread rt)
+target_link_libraries(psearch2aslave common pthread rt)
