--- a/Projects/Project_1/CMakeLists.txt
+++ b/Projects/Project_1/CMakeLists.txt
@@ -12,9 +12,21 @@ add_executable(psearch1b psearch1b.c)
 add_executable(psearch1c psearch1c.c)
 add_executable(psearch2a psearch2a.c)
 add_executable(psearch2aslave psearch2aslave.c)
+add_executable(psearch2b psearch2b.c)
+add_executable(psearch2bslave psearch2bslave.c)
+add_executable(psearch2c psearch2c.c)
+add_executable(psearch2cslave psearch2cslave.c)
+add_executable(psearch2d psearch2d.c)
+add_executable(psearch2dslave psearch2dslave.c)
 target_link_libraries(test_o common)
 target_link_libraries(psearch1a common)
 target_link_libraries(psearch1b common pthread rt)
 target_link_libraries(psearch1c common)
 target_link_libraries(psearch2a common pthread rt)
 target_link_libraries(psearch2aslave common pthread rt)
+target_link_libraries(psearch2b common pthread rt)
+target_link_libraries(psearch2bslave common pthread rt)
+target_link_libraries(psearch2c common pthread rt)
+target_link_libraries(psearch2cslave common pthread rt)
+target_link_libraries(psearch2d common pthread rt)
+target_link_libraries(psearch2dslave common pthread rt)
