--- a/Projects/Project_1/CMakeLists.txt
+++ b/Projects/Project_1/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(psearch2c psearch2c.c)
 add_executable(psearch2cslave psearch2cslave.c)
 add_executable(psearch2d psearch2d.c)
 add_executable(psearch2dslave psearch2dslave.c)
+add_executable(psearch3 psearch3.c)
 target_link_libraries(test_o common)
 target_link_libraries(psearch1a common)
 target_link_libraries(psearch1b common pthread rt)
@@ -30,3 +31,4 @@ target_link_libraries(psearch2c common pthread rt)
 target_link_libraries(psearch2cslave common pthread rt)
 target_link_libraries(psearch2d common pthread rt)
 target_link_libraries(psearch2dslave common pthread rt)
+target_link_libraries(psearch3 common pthread rt)
