Implement psearch_normal as baseline

--- a/Projects/Project_1/CMakeLists.txt
+++ b/Projects/Project_1/CMakeLists.txt
@@ -2,11 +2,11 @@ cmake_minimum_required(VERSION 3.10)
 project(Homework_1 C)
 
 set(CMAKE_C_STANDARD 99)
-set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -pedantic -Wextra")
 
 add_library(common c_string.c file.c project_util.c)
 add_executable(test_o main.c)
+add_executable(psearch_normal psearch_normal.c)
 add_executable(psearch1a psearch1a.c)
 add_executable(psearch1b psearch1b.c)
 add_executable(psearch1c psearch1c.c)
@@ -20,6 +20,7 @@ add_executable(psearch2d psearch2d.c)
 add_executable(psearch2dslave psearch2dslave.c)
 add_executable(psearch3 psearch3.c)
 target_link_libraries(test_o common)
+target_link_libraries(psearch_normal common)
 target_link_libraries(psearch1a common)
 target_link_libraries(psearch1b common pthread rt)
 target_link_libraries(psearch1c common)
